2000-02-03  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (TopLevel): Autoload `sasl-digest-md5-digest-response'.

2000-02-02  Kenichi OKADA <okada@opaopa.org>

	* SLIM-TIPS: Add comment.

2000-02-01   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* smtp.el (smtp-via-smtp): Assume that `smtp-authenticate-type'
	is a symbol.

2000-02-01  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Downcase `smtp-authenticate-type'.

2000-02-01   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* smtp.el (smtp-via-smtp): Throw `done' instead of `smtp-error';
	when evaluating unwind form, send QUIT command if the process is running.

2000-01-28  Kenichi OKADA <okada@opaopa.org>

	* md5-el.el (md5-encode): If `md5-maximum-internal-length' is nil,
	don't use external md5-program.
	(md5): Ditto.

2000-01-23  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-digest-md5): Don't save insecure words.

2000-01-22  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (TopLevel): Update example for
	`digest-md5-build-response-value'.

2000-01-22  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Autoload `digest-md5-parse-digest-challenge'.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.6 released.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (TopLevel): Eval `sasl' when compile.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Delete function
	`sasl-digest-md5-parse-digest-challenge'.
	* smtp.el (smtp-auth-digest-md5): Don't use
	`sasl-digest-md5-parse-digest-challenge'.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* scram-md5.el (sasl-scram-md5-client-security-info): Eval when compile.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (TopLevel): Delete `digest-md5-nonce-count'.
	(digest-md5-build-response-value): Add `realm',
	`nonce' and `nonce-count'.
	(digest-md5-digest-response): Add options as RFC.
	* sasl.el (TopLevel): New variable `sasl-digest-md5-nonce-count'.