@@ -1,3 +1,7 @@
+2000-04-16  Kenichi OKADA <okada@opaopa.org>
+
+	* sasl.el (sasl-scram-md5-client-security-info): eval-when-compile.
+
 2000-02-03  Kenichi OKADA <okada@opaopa.org>
 
 	* smtp.el (TopLevel): Autoload `sasl-digest-md5-digest-response'.
